fixed interactive headerbar alignment with iframe

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -126,7 +126,7 @@ body#interactive_layout {
   }
 
 	iframe#interactive {
-		padding-top: 87px;
+		padding-top: 83px;
 	}
 }
 
